Added user agent to TvMaze requests.